--- a/style.css
+++ b/style.css
@@ -1,17 +1,22 @@
 body {
+    width: 100%;
     background-image: linear-gradient(45deg, #000000, #010006);
     color: aliceblue;
 }
 
 .nav {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 100px;
-    background: transparent;
+    height: 60px;
+    background: #000000d6;
     color: aliceblue;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    z-index: 100;
 }
 
 .name {
@@ -42,6 +47,10 @@ a span {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+}
+
+.name a span {
+    margin-top: -15px;
 }
 
 #gmail-value {
@@ -77,7 +86,12 @@ a span {
     margin-right: 10px;
 }
 
-#list1 li:hover {
+#list1 li a {
+    color: white;
+    text-decoration: none;
+}
+
+#list1 li a:hover {
     color: #2128f6;
     filter: drop-shadow(0 0 5px #0e95e9);
 }
@@ -87,6 +101,8 @@ a span {
     height: 2px;
     width: 100%;
     box-shadow: 0 0 10px #2600ff;
+    position: fixed;
+    top: 60px;
 }
 
 #nav-button {
@@ -95,6 +111,11 @@ a span {
 
 #list2 {
     display: none;
+}
+
+#main {
+    margin-top: 100px;
+    flex-wrap: wrap;
 }
 
 #main,
@@ -241,18 +262,46 @@ a span {
     }
 }
 
+.col-3 {
+    flex-basis: 33%;
+    max-width: 30%;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    display: block;
+    padding: 1%;
+    font-size: 16px;
+}
+
+.col-3 h1,
+h2 {
+    color: #00ff95;
+    text-decoration: underline;
+}
+
+
+
 @media only screen and (max-width: 750px) {
+    body {
+        width: 90%;
+    }
+
     .nav {
+        position: fixed;
+        left: 0;
+        top: 0;
         width: 100%;
         height: 70px;
-        background: transparent;
+        background: #000000d6;
         color: aliceblue;
         display: flex;
         flex-direction: row;
         justify-content: start;
         align-items: start;
-        left: 0;
+
     }
+
+
 
     #list1 {
         width: 0;
@@ -274,6 +323,10 @@ a span {
         align-items: start;
     }
 
+    .name a span {
+        margin-top: -10px;
+    }
+
     .name span {
         font-size: 12px;
         justify-items: start;
@@ -288,7 +341,7 @@ a span {
         width: 30%;
         border: none;
         text-align: end;
-        margin-right: 5px;
+        margin-right: 10px;
         margin-top: 20px;
     }
 
@@ -317,7 +370,12 @@ a span {
         padding: 5px;
     }
 
-    #list2 li:hover {
+    #list2 li a {
+        color: white;
+        text-decoration: none;
+    }
+
+    #list2 li a:hover {
         color: #2128f6;
         filter: drop-shadow(0 0 5px #0e95e9);
     }
@@ -388,4 +446,28 @@ a span {
         justify-content: center;
         margin-left: -50px;
     }
+
+    .hr {
+        position: fixed;
+        top: 70px;
+        left: 0;
+        background-color: rgb(17, 3, 128);
+        height: 2px;
+        width: 100%;
+        box-shadow: 0 0 10px #2600ff;
+
+    }
+
+    .col-3 {
+        flex-basis: 100%;
+        max-width: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        overflow: hidden;
+        display: block;
+        padding: 1%;
+        font-size: 16px;
+    }
+
 }
